<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.daniel.tesisapp.BuscarEmpresaActivity"
    android:id="@+id/RLEmpresa">

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnEmpresas"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:touchscreenBlocksFocus="false"
        android:transitionGroup="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMostrarEmpresa"
        android:id="@+id/btnMostrarEmpresa"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/spnEmpresas"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreEmp"
        android:id="@+id/tvNombreEmp"
        android:layout_below="@+id/btnMostrarEmpresa"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvNombreEmp2"
        android:layout_alignTop="@+id/tvNombreEmp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCorreoEmp"
        android:id="@+id/tvCorreoEmp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvCorreoEmp2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDireccionEmp"
        android:id="@+id/tvDireccionEmp"
        android:layout_below="@+id/tvCorreoEmp2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvDireccionEmp2"
        android:layout_alignTop="@+id/tvDireccionEmp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvTelefonoEmp"
        android:id="@+id/tvTelefonoEmp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/tvDireccionEmp2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvTelefonoEmp2"
        android:layout_alignTop="@+id/tvTelefonoEmp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
